--- a/Front/Assets/Styles/css/style.css
+++ b/Front/Assets/Styles/css/style.css
@@ -1277,12 +1277,14 @@ mark,
 .table {
   width: 100%;
   margin-bottom: 1rem;
-  color: #212529;
+  color: #393a3c;
 }
-.table th,
-.table td {
+.table th {
   padding: 0.75rem;
-  vertical-align: top;
+  border-top: 1px solid #e9e9e9;
+}
+.table td {
+  padding: 5px 5px 0px 10px;
   border-top: 1px solid #e9e9e9;
 }
 .table thead th {
@@ -10463,7 +10465,7 @@ a[data-toggle="collapse"] {
   border-color: #45a2b8 !important;
 }
 
-#adduser {
+#adduser, #BtnAddContact {
   width: 80px;
   margin-right: 20px;
   background: white;
@@ -10622,4 +10624,9 @@ input[type="checkbox"]:checked + label {
 .proximamente {
   background-size: cover;
   width: 100%;
+}
+
+.emailContact {
+  color: grey;
+  font-size: 12px;
 }
